--- a/_profiles/default.html
+++ b/_profiles/default.html
@@ -27,8 +27,10 @@ interval: 48
 parameters:
   connectivity: "Cable"
   location: "ec2-eu-west-1:Chrome"
-  firstViewOnly: false
-  runs: 5
+  firstViewOnly: true
+  runs: 3
+  width: 1440
+  height: 900
   url: "http://www.nec-display-solutions.de"
 
 #
