--- a/_profiles/ndse-2-pdlfd.html
+++ b/_profiles/ndse-2-pdlfd.html
@@ -19,14 +19,27 @@ default: false
 interval: 48
 
 #
-# WebPageTest test parameters
+# WebPageTest test parameters.
+# For a list of supported params, check:
+#
+# https://www.npmjs.com/package/webpagetest
 #
 parameters:
   connectivity: "Cable"
   location: "ec2-eu-west-1:Chrome"
   firstViewOnly: false
-  runs: 5
+  runs: 3
+  width: 1440
+  height: 900
   url: "https://www.nec-display-solutions.com/p/de/de/products/details/rp/C551.xhtml"
+
+#
+# The URL of the WebPageTest instance to be used with this profile. Please note that
+# if you decide to encrypt this URL, the filmstrip section will not be displayed.
+#
+# If you leave this field out, the public instance of WebPageTest will be used.
+#
+#wptUrl: https://www.webpagetest.org
 
 #
 # Performance budgets are defined with a metric id, a max/min allowed value
