--- a/_profiles/ndse-3-solds_3g-c.html
+++ b/_profiles/ndse-3-solds_3g-c.html
@@ -3,7 +3,7 @@
 # The human-friendly name of the profile. Whenever you're asked for the profile
 # ID, it refers to the name of the profile file — in this case, "default".
 #
-name: "NDSE Product Details C551 (IE EC2, 3G, Chrome)"
+name: "NDSE Solution Digital Signage (IE EC2, 3G, Chrome)"
 
 #
 # The default profile will be the one shown when accessing the root URL of your
@@ -30,7 +30,7 @@ parameters:
   firstViewOnly: false
   runs: 3
   emulateMobile: true
-  url: "https://www.nec-display-solutions.com/p/de/de/products/details/rp/C551.xhtml"
+  url: "https://www.nec-display-solutions.com/p/de/de/solutions/digitalsignage.xhtml"
 
 #
 # The URL of the WebPageTest instance to be used with this profile. Please note that
