--- a/_profiles/ndse-3-solds.html
+++ b/_profiles/ndse-3-solds.html
@@ -3,7 +3,7 @@
 # The human-friendly name of the profile. Whenever you're asked for the profile
 # ID, it refers to the name of the profile file — in this case, "default".
 #
-name: "NDSE Product Details C551 (IE EC2, 3G, Chrome)"
+name: "NDSE Solution Digital Signage (IE EC2, Cable, Chrome)"
 
 #
 # The default profile will be the one shown when accessing the root URL of your
@@ -25,12 +25,13 @@ interval: 48
 # https://www.npmjs.com/package/webpagetest
 #
 parameters:
-  connectivity: "3G"
+  connectivity: "Cable"
   location: "ec2-eu-west-1:Chrome"
   firstViewOnly: false
   runs: 3
-  emulateMobile: true
-  url: "https://www.nec-display-solutions.com/p/de/de/products/details/rp/C551.xhtml"
+  width: 1440
+  height: 900
+  url: "https://www.nec-display-solutions.com/p/de/de/solutions/digitalsignage.xhtml"
 
 #
 # The URL of the WebPageTest instance to be used with this profile. Please note that
@@ -52,10 +53,10 @@ parameters:
 budgets:
   -
     metric: TTFB
-    max: 1000
+    max: 400
 #    alerts: ["emailAlert", "slackAlert"]
   -
     metric: firstPaint
-    max: 4000
+    max: 2000
 #    alerts: ["slackAlert"]
 ---
