--- a/_profiles/ndse-4-references_3g-c.html
+++ b/_profiles/ndse-4-references_3g-c.html
@@ -27,7 +27,8 @@ interval: 48
 parameters:
   connectivity: "3G"
   location: "ec2-eu-west-1:Chrome"
-  firstViewOnly: false
+#  firstViewOnly: false
+  firstViewOnly: true
   runs: 3
   emulateMobile: true
   url: "https://www.nec-display-solutions.com/p/de/de/seemore/casestudies.xhtml"
