--- a/_profiles/ndse-2-pdp.html
+++ b/_profiles/ndse-2-pdp.html
@@ -27,7 +27,8 @@ interval: 48
 parameters:
   connectivity: "Cable"
   location: "ec2-eu-west-1:Chrome"
-  firstViewOnly: false
+#  firstViewOnly: false
+  firstViewOnly: true
   runs: 3
   width: 1440
   height: 900
