Profiles viewport update

--- a/_profiles/default.html
+++ b/_profiles/default.html
@@ -29,8 +29,8 @@ parameters:
   location: "ec2-eu-west-1:Chrome"
   firstViewOnly: true
   runs: 3
-  width: 1440
-  height: 900
+  viewportWidth: 1440
+  viewportHeight: 900
   url: "http://www.nec-display-solutions.de"
 
 #
