--- a/_profiles/ndse-2-pdlfd.html
+++ b/_profiles/ndse-2-pdlfd.html
@@ -30,8 +30,8 @@ parameters:
 #  firstViewOnly: false
   firstViewOnly: true
   runs: 3
-  width: 1440
-  height: 900
+  viewportWidth: 1440
+  viewportHeight: 900
   url: "https://www.nec-display-solutions.com/p/de/de/products/details/rp/C551.xhtml"
 
 #
