--- a/_profiles/default.html
+++ b/_profiles/default.html
@@ -9,7 +9,7 @@ name: "NDSE Start D/A/CH (IE EC2, Cable, Chrome)"
 # The default profile will be the one shown when accessing the root URL of your
 # SpeedTracker site.
 #
-default: false
+default: true
 
 #
 # If you want tests to be repeated automatically, you can an interval (in hours)
