--- a/_profiles/ndse-00-start-redirect.html
+++ b/_profiles/ndse-00-start-redirect.html
@@ -9,7 +9,7 @@ name: "NDSE Start D/A/CH [redirect] (IE EC2, Cable, Chrome)"
 # The default profile will be the one shown when accessing the root URL of your
 # SpeedTracker site.
 #
-default: true
+default: false
 
 #
 # If you want tests to be repeated automatically, you can an interval (in hours)
